apps-resources/quarkus-getting-started/overlays/prod/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quarkus-getting-started
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: quarkus-getting-started
    weight: 100
  wildcardPolicy: None
